--- a/wiki/PlanningAuthoritiesT.wiki
+++ b/wiki/PlanningAuthoritiesT.wiki
@@ -1,21 +1,21 @@
-||  || Tameside Metropolitan Borough Council || Ashton-under-Lyne || searchable by date, and weekly lists || http://public.tameside.gov.uk/plan/f422planapp.asp ||
-||  || Tamworth Borough Council || Tamworth || PlanningExplorer || http://80.1.64.77/MVM/Online/PL/GeneralSearch.aspx ||
-||  || Tandridge District Council || Oxted || searchable by date || http://e-access.tandridge.gov.uk/planning/Planning-Registers/weeklylist/weekly-list.asp ||
-||  || Taunton Deane Borough Council || Taunton || weekly lists as pdf. Search with no date || http://www.tauntondeane.gov.uk/tdbcsites/plan/index.asp ||
-||  || Teesdale District Council || Barnard Castle || searchable by date received || http://teesdale.planning-register.co.uk/ ||
+||  || *Tameside Metropolitan Borough Council* || Ashton-under-Lyne || searchable by date, and weekly lists || http://public.tameside.gov.uk/plan/f422planapp.asp ||
+|| Done || Tamworth Borough Council || Tamworth || PlanningExplorer || http://80.1.64.77/MVM/Online/PL/GeneralSearch.aspx ||
+||  || *Tandridge District Council* || Oxted || searchable by date || http://e-access.tandridge.gov.uk/planning/Planning-Registers/weeklylist/weekly-list.asp ||
+||  || *Taunton Deane Borough Council* || Taunton || weekly lists as pdf. Search with no date || http://www.tauntondeane.gov.uk/tdbcsites/plan/index.asp ||
+||  || *Teesdale District Council* || Barnard Castle || searchable by date received || http://teesdale.planning-register.co.uk/ ||
 || Done || Teignbridge District Council || Newton Abbot || PublicAccess || http://213.152.63.161/publicaccess/ ||
-||  || Telford & Wrekin Council || Telford || weekly lists in html || http://www.telford.gov.uk/apps/planningapplications/planningapplicationlist.asp?year=2007 ||
+||  || *Telford & Wrekin Council* || Telford || weekly lists in html || http://www.telford.gov.uk/apps/planningapplications/planningapplicationlist.asp?year=2007 ||
 || Done || Tendring District Council || Weeley || PublicAccess || http://195.99.151.54/publicaccess/propdb/property/property_searchform.aspx?module=P3 ||
 || Done || Test Valley Borough Council || Andover,  Romsey || PublicAccess || http://publicaccess.testvalley.gov.uk/publicaccess/tdc/tdc_home.aspx ||
-||  || Tewkesbury Borough Council || Tewkesbury || searchable by date || http://planning.tewkesbury.gov.uk/Planet/ispforms.asp?serviceKey=07WCC04163103430 ||
-||  || Thanet District Council || Margate || ukplanning || http://www.ukplanning.com/ukp/custom/forwards/selectandsearch.jsp?council=Thanet%20District%20Council&fwd=search/ ||
+||  || *Tewkesbury Borough Council* || Tewkesbury || searchable by date || http://planning.tewkesbury.gov.uk/Planet/ispforms.asp?serviceKey=07WCC04163103430 ||
+||  || *Thanet District Council* || Margate || ukplanning || http://www.ukplanning.com/ukp/custom/forwards/selectandsearch.jsp?council=Thanet%20District%20Council&fwd=search/ ||
 || Done || Three Rivers District Council || Rickmansworth || PublicAccess || http://www2.threerivers.gov.uk/publicaccess/ ||
-||  || Thurrock Borough Council || Grays || no date search || http://www.thurrock.gov.uk/planning/development/content.php?page=application_search ||
+||  || *Thurrock Borough Council* || Grays || no date search || http://www.thurrock.gov.uk/planning/development/content.php?page=application_search ||
 || Done || Tonbridge & Malling Borough Council || West Malling || PublicAccess || http://publicaccess.tmbc.gov.uk/publicaccess/tdc/tdc_home.aspx ||
 || Done || Torbay Council || Torquay || PublicAccess || http://www.torbay.gov.uk/publicaccess/ ||
-||  || Torfaen County Borough Council || Cwmbran || weekly lists as word docs! || http://www.torfaen.gov.uk/en/living/index.php/mid=325~omid=172 ||
+||  || *Torfaen County Borough Council* || Cwmbran || weekly lists as word docs! || http://www.torfaen.gov.uk/en/living/index.php/mid=325~omid=172 ||
 || Done || Torridge District Council || Bideford || PublicAccess || http://www.torridge.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx ||
-|| Done || Tower Hamlets Borough Council || London || WAM - THIS COULD BE USEFUL, THERE ARE LOTS OF OTHERS LIKE THIS. || http://194.201.98.213/WAM/searchsubmit/performOption.do?action=search ||
-||  || Trafford Metropolitan Borough Council || Trafford || PlanningExplorer || http://planning.trafford.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
+|| Done || Tower Hamlets Borough Council || London || WAM || http://194.201.98.213/WAM/searchsubmit/performOption.do?action=search ||
+|| Done || Trafford Metropolitan Borough Council || Trafford || PlanningExplorer || http://planning.trafford.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
 || Done || Tunbridge Wells Borough Council || Royal Tunbridge Wells || PublicAccess || http://secure.tunbridgewells.gov.uk/publicaccess/ ||
-||  || Tynedale District Council || Hexham || searchable by date registered || http://www.tynedale.gov.uk/business/planappsummary.asp ||
+||  || *Tynedale District Council* || Hexham || searchable by date registered || http://www.tynedale.gov.uk/business/planappsummary.asp ||
