--- a/wiki/PlanningExplorer.wiki
+++ b/wiki/PlanningExplorer.wiki
@@ -1,27 +1,35 @@
 #summary A list of local authorities using PlanningExplorer
 
-We have scrapers for a couple of these (Camden and Hackney)
+We now have a scraper for most of these in python.
+We also have scrapers for a couple (Camden and Hackney) in PHP.
 
+Done, and working:
   * Blackburn
-  * Broadland (no postcodes)
   * Camden - done (has OSGB)
-  * Charnwood (done, but site has a problem with its info links)
+  * Charnwood (done, site has a problem with its info links)
   * Crewe and Nantwich
   * East Staffordshire
   * Epping Forest
-  * Forest Heath (no postcodes)
-  * Hackney - done
+  * Hackney
   * Kennet
   * Lincoln (also WAM)
   * Liverpool
-  * Merton (site down)
-  * Shrewsbury (site is broken)
-  * South Norfolk (appears to have WAM as well) (No postcodes - but has OSGB coords)
   * South Shropshire
   * South Tyneside
   * Stockport
-  * Swansea (site is broken)
   * Tamworth
+
+A few have no postcodes. In some cases they provide OSGB, which we should probably use instead.
+
+  * Broadland (no postcodes)
+  * Forest Heath (no postcodes)
+  * South Norfolk (appears to have WAM as well) (No postcodes - but has OSGB coords)
   * Trafford (no postcodes)
-  * Waltham Forest (currently giving an error)
   * West Oxfordshire (no postcodes)
+
+These ones are not yet done, as the sites are currently down:
+
+  * Merton (site down)
+  * Shrewsbury (site is broken)
+  * Swansea (site is broken)
+  * Waltham Forest (currently giving an error)
