--- a/wiki/PlanningAuthoritiesI.wiki
+++ b/wiki/PlanningAuthoritiesI.wiki
@@ -1,6 +1,6 @@
-||  || Inverclyde Council || Greenock || one week available as a pdf, or whole years... || http://www.inverclyde.gov.uk/Economic_Development/index.php?module=article&view=202&MMN_position=218:86&MMN_position=220:86 ||
-||  || Ipswich Borough Council || Ipswich || searchable by date || https://online.ipswich.gov.uk/ppc/appnsearch.aspx ||
-||  || Isle of Anglesey County Council || Llangefni || weekly lists as pdf || http://www.anglesey.gov.uk/doc.asp?cat=3343 ||
-||  || Isle of Wight Council || Newport || no date search, would have to view all current applications || http://www.iwight.com/council/departments/planning/appsdip/PlanAppSearch.aspx ||
-||  || Council of the Isles of Scilly || St. Mary's || planning apps in html - searchable by date ||http://www.scilly.gov.uk/environment/planning/applications.htm ||
+||  || *Inverclyde Council* || Greenock || one week available as a pdf, or whole years... || http://www.inverclyde.gov.uk/Economic_Development/index.php?module=article&view=202&MMN_position=218:86&MMN_position=220:86 ||
+||  || *Ipswich Borough Council* || Ipswich || searchable by date || https://online.ipswich.gov.uk/ppc/appnsearch.aspx ||
+||  || *Isle of Anglesey County Council* || Llangefni || weekly lists as pdf || http://www.anglesey.gov.uk/doc.asp?cat=3343 ||
+||  || *Isle of Wight Council* || Newport || no date search, would have to view all current applications || http://www.iwight.com/council/departments/planning/appsdip/PlanAppSearch.aspx ||
+||  || *Council of the Isles of Scilly* || St. Mary's || planning apps in html - searchable by date ||http://www.scilly.gov.uk/environment/planning/applications.htm ||
 || Done || Islington Borough Council || London ||  || https://www.islington.gov.uk/onlineplanning/apas/run/wphappcriteria.display||
