Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesJ.wiki
+++ b/wiki/PlanningAuthoritiesJ.wiki
@@ -1,1 +1,1 @@
-|| || States of Jersey || St. Helier || searchable by date || http://www.gov.je/pneapps/web/PlanningApplicationSearch.aspx||
+|| || *States of Jersey* || St. Helier || searchable by date || http://www.gov.je/pneapps/web/PlanningApplicationSearch.aspx||
