--- a/wiki/PlanningAuthoritiesP.wiki
+++ b/wiki/PlanningAuthoritiesP.wiki
@@ -1,13 +1,13 @@
-|| || Peak District National Park Authority || Bakewell || html results searchable by date || http://217.147.178.232/pam/search.jsp || 
-|| || Pembrokeshire Coast National Park Authority || Haverfordwest || html results searchable by date  || http://www.pcnpa.org.uk/website/default.asp?SID=1097 ||
-|| || Pembrokeshire County Council || Haverfordwest || searchable by date || http://planning.pembrokeshire.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
-|| || Pendle Borough Council || Nelson || interactive planning - searchable by date || http://bopdoccip.pendle.gov.uk/PlanApp/jsp/searchPlan.jsp ||
-|| || Penwith District Council || Penzance || planning applications organised by year (in html) || http://www.penwith.gov.uk/index.cfm?articleid=7088 ||
-|| Done || Perth & Kinross Council || Perth || PublicAccess || http://193.63.61.22/publicaccess/ ||
-|| Done || Peterborough City Council || Peterborough || PublicAccess || ||
-|| || Plymouth City Council || Plymouth || searchable by date || http://www.plymouth.gov.uk/planningapplications2/search.asp ||
-|| || Poole Borough Council || Poole || weekly lists || http://wam.boroughofpoole.com/WAM/search/pas/index.htm ||
-|| Done || Portsmouth City Council || Portsmouth || PublicAccess || 
-|| || Powys County Council || Brecon, Llandrindod Wells, Welshpool || very little of use. || http://www.powys.gov.uk/index.php?id=75 || 
-|| || Preston City Council || Preston || weekly lists as pdf - hard to navigate|| http://www.preston.gov.uk/Category.asp?cat=1555 ||
-|| || Purbeck District Council || Wareham || received since search || http://www.purbeck.gov.uk/planning/planappsrch.asp ||
+|| || *Peak District NPA* || Bakewell || html results searchable by date || http://217.147.178.232/pam/search.jsp || 
+|| || *Pembrokeshire Coast NPA* || Haverfordwest || html results searchable by date  || http://www.pcnpa.org.uk/website/default.asp?SID=1097 ||
+|| || *Pembrokeshire* || Haverfordwest || searchable by date || http://planning.pembrokeshire.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
+|| || *Pendle* || Nelson || interactive planning - searchable by date || http://bopdoccip.pendle.gov.uk/PlanApp/jsp/searchPlan.jsp ||
+|| || *Penwith* || Penzance || planning applications organised by year (in html) || http://www.penwith.gov.uk/index.cfm?articleid=7088 ||
+|| Done || Perth & Kinross || Perth || PublicAccess || http://193.63.61.22/publicaccess/ ||
+|| Done || Peterborough || Peterborough || PublicAccess || ||
+|| || *Plymouth* || Plymouth || searchable by date || http://www.plymouth.gov.uk/planningapplications2/search.asp ||
+|| || *Poole* || Poole || weekly lists || http://wam.boroughofpoole.com/WAM/search/pas/index.htm ||
+|| Done || Portsmouth || Portsmouth || PublicAccess || 
+|| || *Powys* || Brecon, Llandrindod Wells, Welshpool || very little of use. || http://www.powys.gov.uk/index.php?id=75 || 
+|| || *Preston* || Preston || weekly lists as pdf - hard to navigate|| http://www.preston.gov.uk/Category.asp?cat=1555 ||
+|| || *Purbeck* || Wareham || received since search || http://www.purbeck.gov.uk/planning/planappsrch.asp ||
