Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -11,6 +11,7 @@ Types of site for which we have scrapers written
   * PlanningExplorer
   * RutlandLike (the ones that look like the Rutland site)
   * AtriumePlanning
+  * SwiftLG
 
 Others:
 
@@ -26,23 +27,6 @@ Others:
 Provided directly by the council:
 
   * Wansbeck
-
-Sites that look like East Hertfordshire (urls contain "wphappcriteria"):
-
-  * Daventry
-  * Dudley
-  * Gwynedd
-  * Islington (done)
-  * Lake District National Park
-  * Macclesfield
-  * Maidstone
-  * Mole Valley
-  * Pembrokeshire County Council
-  * Rochdale
-  * Slough
-  * Snowdonia National Park
-  * St Edmundsbury
-  * Dublin (though this might be a bit outside our remit :-))
 
 Sites that look like Tower Hamlets (WAM)
 
