--- a/wiki/SwiftLG.wiki
+++ b/wiki/SwiftLG.wiki
@@ -1,11 +1,16 @@
 Sites that look like East Hertfordshire (urls contain "wphappcriteria"):
 
-    * Daventry
+We now have a python parser for these (as well as parsers in PHP for East Herts and Islington).
+
+Daventry and Macclesfield are currently not responding, so we'll have to do them later.
+
+    * Daventry (currently not responding)
     * Dudley
+    * East Hertfordshire
     * Gwynedd
-    * Islington (done)
+    * Islington
     * Lake District National Park
-    * Macclesfield
+    * Macclesfield (currently not responding)
     * Maidstone
     * Mole Valley
     * Pembrokeshire County Council
